--- a/css/style.css
+++ b/css/style.css
@@ -137,11 +137,12 @@ animation-delay: 8s;
  @media screen and (max-width: 1024px) {
 
   #cf {position: relative;
-    height: 500px;
+    height: 450px;
     
   }
 
 }; 
+
 
 
 /* @media screen and (max-width: 980px) {
@@ -163,15 +164,14 @@ animation-delay: 8s;
 }; */
 
 
-@media screen and (min-width: 500px) {
+/* @media screen and (max-width: 658px) {
 
-  #cf {
-    position: relative;
-    height: 400px;
+  #cf {position: relative;
+    height: 20px;
+    
   }
 
-};
-
+}; */
 
 
 
