--- a/css/style.css
+++ b/css/style.css
@@ -183,15 +183,14 @@ width: 100%;
 
 
 .spaceBt {
-  margin-top:30px;  
+  text-align: center;
 }
 
 #buttonPos {
-text-align: center;
+align-items: center;
 }
 
 #next_button{
-margin-right: 205px;
 margin-bottom: 20px
 };
 
