fixed css rules

--- a/css/style.css
+++ b/css/style.css
@@ -183,15 +183,15 @@ width: 100%;
 
 
 .spaceBt {
-  margin-top:30px;  
+  text-align: center;
+  margin-top:30px;
 }
 
 #buttonPos {
-text-align: center;
+align-items: center;
 }
 
 #next_button{
-margin-right: 205px;
 margin-bottom: 20px
 };
 
@@ -232,14 +232,6 @@ h5 {
   display: flex;
   justify-content: center;
   align-items: stretch;}
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD
->>>>>>> kareem-css
-=======
-=======
->>>>>>> 524a333e2178fbc19a76a82d2eb2ebc06cdd8c47
 
 
 .page-footer .container {
@@ -249,16 +241,5 @@ h5 {
 }
 
 #logo-container .material-icons {
-<<<<<<< HEAD
   font-size:50px;
-<<<<<<< HEAD
 }
->>>>>>> kareem-css
->>>>>>> ee0e9cfa20cdd87613dd524005d032c00a1a6348
-=======
-  font-size:55px;
-}
->>>>>>> kareem-css
-=======
-}
->>>>>>> 524a333e2178fbc19a76a82d2eb2ebc06cdd8c47
